Style the header section

--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
+    <header class="center">
         <nav>
             <div>
                 Logo
             </div>
 
-            <div>
-                <ui>
-                    <li>Shop </li>
-                    <li>Receipe</li>
-                    <li>Allergies</li>
-                    <li>Contact Us</li>
-                </ui>
-            </div>
+            <ui id="header-items">
+                <li class="header-item">Shop </li>
+                <li class="header-item">Receipe</li>
+                <li class="header-item">Allergies</li>
+                <li class="header-item">Contact Us</li>
+            </ui>
 
             <div>
-                <input type="text" placeholder="Search">
+                <input type="text" placeholder="Search for Product" id="header-search-box">
             </div>
         </nav>
     </header>
