Complete Featured Products section

--- a/index.html
+++ b/index.html
@@ -29,11 +29,43 @@
     </header>
 
     <section id="featured-product">
-        <h1>Featured Product</h1>
-        <div>
-            <div>Product 1</div>
-            <div>Product 1</div>
-            <div>Product 1</div>
+        <h1 class="heading">Featured Product</h1>
+        <div id="products">
+            <div class="product-item">
+                <img src="./images/one.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Apple</div>
+                    <div>Price: 5$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/two.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Carrot</div>
+                    <div>Price: 10$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/three.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Banana</div>
+                    <div>Price: 20$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/four.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Brocolli</div>
+                    <div>Price: 30$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+
+
         </div>
     </section>
 
