Create footer section

--- a/index.html
+++ b/index.html
@@ -75,10 +75,27 @@
     </section>
 
     <footer>
-        <div>Social Media Links</div>
-        <div>Terms of Policy</div>
-        <div>Privacy Policy</div>
-        <div> Contact Information</div>
+        <div>
+            <div class="footer-item">
+                <div>Social Media Links</div>
+                <div>
+                    <p>Facebook</p>
+                    <p>Instagram</p>
+                    <p>Twitter</p>
+                    <p>Linkedin</p>
+                </div>
+            </div>
+            <div>Terms of Policy</div>
+            <div>Privacy Policy</div>
+            <div class="footer-item">
+                <div> Contact Information</div>
+                <div>
+                    <p>980000000000</p>
+                    <p>example@example.com</p>
+                </div>
+            </div>
+        </div>
+        <div> &#169; Homepage 2024, All right reserved.</div>
     </footer>
 </body>
 
