create newsletter section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
         <div>Deals</div>
     </section>
 
+
+    <section id="newsletter">
+        <h1>SUBSCRIBE TO NEWSLETTER</h1>
+        <div>
+            <input type="text" placeholder="Enter you Email Addrerss">
+            <button>SUBSCRIBE NOW</button>
+        </div>
+    </section>
+
     <footer>
         <div>
             <div class="footer-item">
