Fruits and Vegatble in the Featured Section

--- a/index.html
+++ b/index.html
@@ -68,10 +68,21 @@
         </div>
     </section>
     <section id="featured-product">
-        <h1 class="heading">Featured Product</h1>
-        <div id="products">
+        <div>
+
+            <h1 class="heading">Featured Product</h1>
+            <div>
+                <button id="all-products">All Products</button>
+                <button id="fruits">Fruits</button>
+                <button id="vegetables">
+                    Vegetables
+                </button>
+            </div>
+        </div>
+
+        <div id="fruits-products" class="">
             <div class="product-item">
-                <img src="./images/one.jpg" alt="product-one" class="product-image"></img>
+                <img src="./images/fruits/one.jpg" alt="product-one" class="product-image"></img>
                 <div class="product-details">
                     <div>Apple</div>
                     <div>5$/1 kg</div>
@@ -80,7 +91,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./images/two.jpg" alt="product-one" class="product-image"></img>
+                <img src="./images/fruits/two.jpg" alt="product-one" class="product-image"></img>
                 <div class="product-details">
                     <div>Carrot</div>
                     <div>10$/ 1kg</div>
@@ -89,7 +100,7 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./images/three.jpg" alt="product-one" class="product-image"></img>
+                <img src="./images/fruits/three.jpg" alt="product-one" class="product-image"></img>
                 <div class="product-details">
                     <div>Banana</div>
                     <div> 20$/ 1 Dozen</div>
@@ -98,9 +109,50 @@
                 </div>
             </div>
             <div class="product-item">
-                <img src="./images/four.jpg" alt="product-one" class="product-image"></img>
+                <img src="./images/fruits/four.jpg" alt="product-one" class="product-image"></img>
                 <div class="product-details">
-                    <div>Brocolli</div>
+                    <div>Mango</div>
+                    <div>30$/1 kg</div>
+                    <div>24$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+
+
+
+        </div>
+        <div id="vegetables-products" class="">
+            <div class="product-item">
+                <img src="./images/vegetables/one.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Apple</div>
+                    <div>5$/1 kg</div>
+                    <div>$ 1.15</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/vegetables/two.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Carrot</div>
+                    <div>10$/ 1kg</div>
+                    <div>5$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/vegetables/three.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Banana</div>
+                    <div> 20$/ 1 Dozen</div>
+                    <div>15$</div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="product-item">
+                <img src="./images/vegetables/four.jpg" alt="product-one" class="product-image"></img>
+                <div class="product-details">
+                    <div>Mango</div>
                     <div>30$/1 kg</div>
                     <div>24$</div>
                     <button>Add to Cart</button>
@@ -149,6 +201,8 @@
         </div>
         <div> &#169; Homepage 2024, All right reserved.</div>
     </footer>
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
