changes to fruits

--- a/fruits.html
+++ b/fruits.html
@@ -81,12 +81,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/four.jpg"
+            src="./images/fruits/dragonfruit (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Dragonfruit</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -96,12 +96,12 @@
       <div id="vegetables-products" class="vegetables-products">
         <div class="product-item">
           <img
-            src="./images/vegetables/one.jpg"
+            src="./images/fruits/plums (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Plums</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -109,12 +109,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/two.jpg"
+            src="./images/fruits/grapes (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Grapes</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -122,12 +122,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/three.jpg"
+            src="./images/fruits/oranges (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Oranges</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -135,12 +135,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/four.jpg"
+            src="./images/fruits/lychees (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Lychees</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -150,12 +150,12 @@
       <div id="fruits-products2" class="fruits-products">
         <div class="product-item">
           <img
-            src="./images/fruits/one.jpg"
+            src="./images/fruits/rambutan (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Rambutan</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -163,12 +163,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/two.jpg"
+            src="./images/fruits/watermelon (1).png"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Watermelon</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -176,12 +176,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/three.jpg"
+            src="./images/fruits/kiwi (1).png"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Kiwi</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -189,12 +189,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/four.jpg"
+            src="./images/fruits/strawberry (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Strawberry</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -204,12 +204,12 @@
       <div id="vegetables-products2" class="vegetables-products">
         <div class="product-item">
           <img
-            src="./images/vegetables/one.jpg"
+            src="./images/fruits/pomegranate (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Pomegranate</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -217,12 +217,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/two.jpg"
+            src="./images/fruits/pear (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Pear</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -230,12 +230,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/three.jpg"
+            src="./images/fruits/pineapple (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Pineapple</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -243,12 +243,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/four.jpg"
+            src="./images/fruits/cherry (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Cherry</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
