--- a/vegetables.html
+++ b/vegetables.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HomePage</title>
+    <title>Vegetables</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style.home.css" />
   </head>
@@ -34,7 +34,6 @@
       <div>
         <h1 class="heading">Featured Product</h1>
         <div>
-          <button id="all-products">All Products</button>
           <button id="fruits">Fruits</button>
           <button id="vegetables">Vegetables</button>
         </div>
