--- a/fruits.html
+++ b/fruits.html
@@ -32,10 +32,8 @@
 
     <section id="featured-product">
       <div>
-        <h1 class="heading">Featured Product</h1>
+        <h1 class="heading">Featured Products- Fruits</h1>
         <div>
-          <button id="fruits">Fruits</button>
-          <button id="vegetables">Vegetables</button>
         </div>
       </div>
 
@@ -60,7 +58,7 @@
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Banana</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -73,7 +71,7 @@
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Mango</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
