--- a/vegetables.html
+++ b/vegetables.html
@@ -32,22 +32,20 @@
 
     <section id="featured-product">
       <div>
-        <h1 class="heading">Featured Product</h1>
+        <h1 class="heading">Featured Products- Vegetables</h1>
         <div>
-          <button id="fruits">Fruits</button>
-          <button id="vegetables">Vegetables</button>
         </div>
       </div>
 
       <div id="fruits-products" class="fruits-products">
         <div class="product-item">
           <img
-            src="./images/fruits/one.jpg"
+            src="./images/vegetables/pumpkin.jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Pumpkin</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -55,12 +53,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/two.jpg"
+            src="./images/vegetables/broccoli.jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Broccoli</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -68,12 +66,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/three.jpg"
+            src="./images/vegetables/cabbage.jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Cabbage</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -81,12 +79,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/four.jpg"
+            src="./images/vegetables/lettuce.jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Lettuce</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -96,12 +94,12 @@
       <div id="vegetables-products" class="vegetables-products">
         <div class="product-item">
           <img
-            src="./images/vegetables/one.jpg"
+            src="./images/vegetables/tomato (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Tomato</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -109,12 +107,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/two.jpg"
+            src="./images/vegetables/potato (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Potato</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -122,12 +120,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/three.jpg"
+            src="./images/vegetables/cucumber (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Cucumber</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -135,12 +133,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/four.jpg"
+            src="./images/vegetables/carrot (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Carrot</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -150,12 +148,12 @@
       <div id="fruits-products2" class="fruits-products">
         <div class="product-item">
           <img
-            src="./images/fruits/one.jpg"
+            src="./images/vegetables/raddish (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>Raddish</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -163,12 +161,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/two.jpg"
+            src="./images/vegetables/onions (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>Onions</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -176,12 +174,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/three.jpg"
+            src="./images/vegetables/garlic (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Garlic</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -189,12 +187,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/fruits/four.jpg"
+            src="./images/vegetables/lemongrass (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>LemonGrass</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
@@ -204,12 +202,12 @@
       <div id="vegetables-products2" class="vegetables-products">
         <div class="product-item">
           <img
-            src="./images/vegetables/one.jpg"
+            src="./images/vegetables/coriander (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Apple</div>
+            <div>coriander</div>
             <div>5$/1 kg</div>
             <div>$ 1.15</div>
             <button>Add to Cart</button>
@@ -217,12 +215,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/two.jpg"
+            src="./images/vegetables/springonion (1).png"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Carrot</div>
+            <div>SpringOnion</div>
             <div>10$/ 1kg</div>
             <div>5$</div>
             <button>Add to Cart</button>
@@ -230,12 +228,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/three.jpg"
+            src="./images/vegetables/leeks (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Banana</div>
+            <div>Leeks</div>
             <div>20$/ 1 Dozen</div>
             <div>15$</div>
             <button>Add to Cart</button>
@@ -243,12 +241,12 @@
         </div>
         <div class="product-item">
           <img
-            src="./images/vegetables/four.jpg"
+            src="./images/vegetables/capsicum (1).jpg"
             alt="product-one"
             class="product-image"
           />
           <div class="product-details">
-            <div>Mango</div>
+            <div>Capsicum</div>
             <div>30$/1 kg</div>
             <div>24$</div>
             <button>Add to Cart</button>
